{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 33,
  "lineage": "f65157f2-abb5-0b9e-5f38-3b95b3fa5265",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "agent-connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1514"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:49:31.543-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-agent-connection",
            "log_config": [],
            "name": "wazuh-test-fw-allow-agent-connection",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-agent-connection",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "agent-connection"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "agent-enrolment",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1515"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:49:43.388-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-agent-enrolment",
            "log_config": [],
            "name": "wazuh-test-fw-allow-agent-enrolment",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-agent-enrolment",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "agent-enrolment"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-cluster-communication",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9300-9400"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:49:43.754-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-cluster-communication",
            "log_config": [],
            "name": "wazuh-test-fw-allow-cluster-communication",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-cluster-communication",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cluster-communication"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:36:14.486-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-https",
            "log_config": [],
            "name": "wazuh-test-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:36:14.492-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-internal",
            "log_config": [],
            "name": "wazuh-test-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-internal",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rest-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9200"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:49:31.496-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-rest-api",
            "log_config": [],
            "name": "wazuh-test-fw-allow-rest-api",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-rest-api",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "rest-api"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:36:14.516-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-ssh",
            "log_config": [],
            "name": "wazuh-test-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:49:43.491-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-ssh-internal",
            "log_config": [],
            "name": "wazuh-test-fw-allow-ssh-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-ssh-internal",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cluster-daemon",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1516"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:49:31.464-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-cluster-daemon",
            "log_config": [],
            "name": "wazuh-test-fw-allow-cluster-daemon",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-cluster-daemon",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cluster-daemon"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "server-restful-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "55000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:49:31.351-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-server-restfull-api",
            "log_config": [],
            "name": "wazuh-test-fw-allow-server-restfull-api",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-server-restfull-api",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "server-restfull-api"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "syslog-collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "514"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "514"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-08-18T22:49:35.375-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-syslog-collector",
            "log_config": [],
            "name": "wazuh-test-fw-allow-syslog-collector",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "priority": 1000,
            "project": "wazuhstepup",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/firewalls/wazuh-test-fw-allow-syslog-collector",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "syslog-collector"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wazuh-dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220810",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/zones/asia-south1-a/disks/wazuh-test-wazuh-dashboard"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "wazuh-vm-ef582652.honesttbank",
            "id": "projects/wazuhstepup/zones/asia-south1-a/instances/wazuh-test-wazuh-dashboard",
            "instance_id": "6336866189868964202",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "PxFRmo_zApg=",
            "metadata_startup_script": "sudo apt-get update",
            "name": "wazuh-test-wazuh-dashboard",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.100.167.9",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
                "network_ip": "10.10.1.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/regions/asia-south1/subnetworks/wazuh-test-public-subnet-1",
                "subnetwork_project": "wazuhstepup"
              }
            ],
            "project": "wazuhstepup",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/zones/asia-south1-a/instances/wazuh-test-wazuh-dashboard",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "https",
              "ssh"
            ],
            "tags_fingerprint": "TOOZjybDhGY=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wazuh-indexer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220810",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/zones/asia-south1-a/disks/wazuh-test-wazuh-indexer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "wazuh-vm-ef582652.honesttbank",
            "id": "projects/wazuhstepup/zones/asia-south1-a/instances/wazuh-test-wazuh-indexer",
            "instance_id": "8261563038047574379",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "PxFRmo_zApg=",
            "metadata_startup_script": "sudo apt-get update",
            "name": "wazuh-test-wazuh-indexer",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
                "network_ip": "10.10.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/regions/asia-south1/subnetworks/wazuh-test-public-subnet-1",
                "subnetwork_project": "wazuhstepup"
              }
            ],
            "project": "wazuhstepup",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/zones/asia-south1-a/instances/wazuh-test-wazuh-indexer",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cluster-communication",
              "rest-api",
              "ssh-internal"
            ],
            "tags_fingerprint": "lCETuSkZDf8=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wazuh-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220810",
                    "size": 500,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/zones/asia-south1-a/disks/wazuh-test-wazuh-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "wazuh-vm-ef582652.honesttbank",
            "id": "projects/wazuhstepup/zones/asia-south1-a/instances/wazuh-test-wazuh-server",
            "instance_id": "3191203288688269674",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "PxFRmo_zApg=",
            "metadata_startup_script": "sudo apt-get update",
            "name": "wazuh-test-wazuh-server",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
                "network_ip": "10.10.1.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/regions/asia-south1/subnetworks/wazuh-test-public-subnet-1",
                "subnetwork_project": "wazuhstepup"
              }
            ],
            "project": "wazuhstepup",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/zones/asia-south1-a/instances/wazuh-test-wazuh-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "agent-connection",
              "agent-enrolment",
              "cluster-daemon",
              "server-restfull-api",
              "ssh-internal",
              "syslog-collector"
            ],
            "tags_fingerprint": "lAVYysp9CpE=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "mtu": 0,
            "name": "wazuh-test-vpc",
            "project": "wazuhstepup",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-18T22:36:17.410-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/wazuhstepup/regions/asia-south1/subnetworks/wazuh-test-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "wazuh-test-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/global/networks/wazuh-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "wazuhstepup",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wazuhstepup/regions/asia-south1/subnetworks/wazuh-test-public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}